--- a/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
+++ b/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
@@ -81,6 +81,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "JsgPZb_Mr7qP"
@@ -90,8 +91,8 @@
     "- `data`:  classes for representing dataset, wrappers around TensorFlow Dataset\n",
     "- `eval`: custom evaluation metrics implemented in Keras/TF to work as `metrics` for model training\n",
     "- `layers`: custom layer implementation required for the different models\n",
-    "- `models`: different model implementations for Retention Time Prediction\n",
-    "- `pipelines`: complete pipelines to run a task (e.g. Retention Time prediction)\n",
+    "- `models`: different model implementations for Retention Time and Fragment Ion Intensity Prediction\n",
+    "- `pipelines`: complete pipelines to run a task (e.g. Retention Time and Fragment Ion Intensity Prediction)\n",
     "- `utils`: helper modules\n",
     "\n",
     "**Note**: reports and pipelines are work-in-progress, some funtionalities are not complete."
@@ -131,6 +132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "41qXroyKr7qP"
@@ -138,7 +140,7 @@
    "source": [
     "## 1. Load Data\n",
     "\n",
-    "We can import the dataset class and create an object of type `RetentionTimeDataset`. This object wraps around TensorFlow dataset objects for training+validation or for testing. This can be specified by the arguments `val_ratio` and `test`."
+    "We can import the dataset class and create an object of type `IntensityDataset`. This object wraps around TensorFlow dataset objects for training+validation or for testing. This can be specified by the arguments `val_ratio` and `test`."
    ]
   },
   {
@@ -165,8 +167,8 @@
     "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH,\n",
-    "                              seq_length=30, batch_size=BATCH_SIZE,collision_energy_col='collision_energy', val_ratio=0.2, test=False)"
+    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH, seq_length=30, batch_size=BATCH_SIZE,\n",
+    "                            collision_energy_col='collision_energy', val_ratio=0.2, test=False)"
    ]
   },
   {
@@ -211,6 +213,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "oWeVi0iar7qT"
@@ -218,9 +221,11 @@
    "source": [
     "## 2. Model\n",
     "\n",
-    "We can now create the model. We will use a simple Prediction with a conv1D encoder. It has the default working arguments, but most of the parameters can be customized.\n",
+    "We can now create the model. We will use a Prosit model [1]. It has the default working arguments, but most of the parameters can be customized.\n",
     "\n",
-    "**Note**: Important is to ensure that the padding length used for the dataset object is equal to the sequence length passed to the model."
+    "**Note**: Important is to ensure that the padding length used for the dataset object is equal to the sequence length passed to the model.\n",
+    "\n",
+    "*[1] Gessulat, S., Schmidt, T., Zolg, D. P., Samaras, P., Schnatbaum, K., Zerweck, J., ... & Wilhelm, M. (2019). Prosit: proteome-wide prediction of peptide tandem mass spectra by deep learning. Nature methods, 16(6), 509-518.*"
    ]
   },
   {
@@ -270,7 +275,6 @@
     "#imports\n",
     "\n",
     "import tensorflow as tf\n",
-    "from dlomix.eval import TimeDeltaMetric\n",
     "from dlomix.losses import masked_spectral_distance, masked_pearson_correlation_distance\n",
     "tf.get_logger().setLevel('ERROR')"
    ]
@@ -386,13 +390,6 @@
     "# create a report object by passing the history object and plot different metrics\n",
     "report = IntensityReport(output_path=\"./output\", history=history)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
