--- a/notebooks/Intensity/tasks/1_LearningRate.ipynb
+++ b/notebooks/Intensity/tasks/1_LearningRate.ipynb
@@ -21,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +78,8 @@
     "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH,\n",
-    "                              seq_length=30, collision_energy_col='collision_energy', batch_size=BATCH_SIZE, val_ratio=0.2, test=False)"
+    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH, seq_length=30,\n",
+    "                            collision_energy_col='collision_energy', batch_size=BATCH_SIZE, val_ratio=0.2, test=False)"
    ]
   },
   {
@@ -116,10 +108,10 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss=masked_spectral_distance, metrics=[masked_pearson_correlation_distance,'mean_absolute_error', 'mse'])\n",
+    "              loss=masked_spectral_distance, metrics=[masked_pearson_correlation_distance,'mean_absolute_error', 'mse'])\n",
     "\n",
-    "history = model.fit(int_data.train_data, validation_data=int_data.val_data, epochs=15\n",
-    "                    ,callbacks=[WandbCallback(save_model=False)])\n",
+    "history = model.fit(int_data.train_data, validation_data=int_data.val_data,\n",
+    "                    epochs=15, callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "\n",
     "# Mark the run as finished\n",
@@ -143,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
