--- a/notebooks/Intensity/tasks/2_LossFunction.ipynb
+++ b/notebooks/Intensity/tasks/2_LossFunction.ipynb
@@ -78,8 +78,8 @@
     "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH,\n",
-    "                              seq_length=30, collision_energy_col='collision_energy', batch_size=BATCH_SIZE, val_ratio=0.2, test=False)"
+    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH, seq_length=30,\n",
+    "                            collision_energy_col='collision_energy', batch_size=BATCH_SIZE, val_ratio=0.2, test=False)"
    ]
   },
   {
@@ -110,21 +110,14 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss=loss_function, metrics=[masked_pearson_correlation_distance])\n",
+    "              loss=loss_function, metrics=[masked_pearson_correlation_distance])\n",
     "\n",
-    "history = model.fit(int_data.train_data, validation_data=int_data.val_data, epochs=15\n",
-    "                    , callbacks=[WandbCallback(save_model=False)])\n",
+    "history = model.fit(int_data.train_data, validation_data=int_data.val_data,\n",
+    "                    epochs=15, callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "# Mark the run as finished\n",
     "wandb.finish()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
