--- a/notebooks/Intensity/tasks/4_DataSplit.ipynb
+++ b/notebooks/Intensity/tasks/4_DataSplit.ipynb
@@ -66,6 +66,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# enter project name for weights and biases\n",
+    "project_name = 'dlomix_intensity'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -99,14 +109,14 @@
     "\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "int_data = RetentionTimeDataset(data_source=TRAIN_DATAPATH_A,\n",
+    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH_A,\n",
     "                              seq_length=30, collision_energy_col='collision_energy',batch_size=BATCH_SIZE, val_ratio=0.2)\n",
     "\n",
     "\n",
     "# this is the test dataset object, do not forget to change it to the respective suffix (A or B)\n",
     "# when you change the training dataset\n",
     "\n",
-    "int_data = RetentionTimeDataset(data_source=TEST_DATAPATH_A,\n",
+    "int_data = IntensityDataset(data_source=TEST_DATAPATH_A,\n",
     "                              seq_length=30, collision_energy_col='collision_energy',batch_size=BATCH_SIZE, test=True)"
    ]
   },
@@ -127,10 +137,10 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss=masked_spectral_distance, metrics=[masked_pearson_correlation_distance,'mean_absolute_error', 'mse'])\n",
+    "              loss=masked_spectral_distance, metrics=[masked_pearson_correlation_distance,'mean_absolute_error', 'mse'])\n",
     "\n",
-    "history = model.fit(int_data.train_data, validation_data=int_data.val_data, epochs=15,\n",
-    "                    callbacks=[WandbCallback(save_model=False)])\n",
+    "history = model.fit(int_data.train_data, validation_data=int_data.val_data,\n",
+    "                    epochs=15, callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "\n",
     "# Mark the run as finished\n",
@@ -144,13 +154,6 @@
     "### Bonus:\n",
     "After analyzing the results, can you figure out what is wrong with these splits and how different are they from each other?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
