fix intensity split

--- a/notebooks/Intensity/tasks/4_DataSplit.ipynb
+++ b/notebooks/Intensity/tasks/4_DataSplit.ipynb
@@ -21,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_a/proteomeTools_train_val_a.csv'\n",
-    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_b/proteomeTools_train_val_b.csv'\n",
+    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_a/proteomeTools_train_val_split_a.csv'\n",
+    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_b/proteomeTools_train_val_split_b.csv'\n",
     "\n",
-    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_a/proteomeTools_test_a.csv'\n",
-    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_b/proteomeTools_test_b.csv'"
+    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_a/proteomeTools_test_split_a.csv'\n",
+    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/Intensity/split_b/proteomeTools_test_split_b.csv'"
    ]
   },
   {
@@ -116,7 +108,7 @@
     "# this is the test dataset object, do not forget to change it to the respective suffix (A or B)\n",
     "# when you change the training dataset\n",
     "\n",
-    "int_data = IntensityDataset(data_source=TEST_DATAPATH_A,\n",
+    "int_data_test = IntensityDataset(data_source=TEST_DATAPATH_A,\n",
     "                              seq_length=30, collision_energy_col='collision_energy',batch_size=BATCH_SIZE, test=True)"
    ]
   },
@@ -172,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.12"
   },
   "vscode": {
    "interpreter": {
