--- a/notebooks/RetentionTime/Example_RTModel_Walkthrough_colab.ipynb
+++ b/notebooks/RetentionTime/Example_RTModel_Walkthrough_colab.ipynb
@@ -49,15 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python -m pip install -q wandb"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Mo7H9qzWr7qN"
@@ -90,7 +81,6 @@
     "import pandas as pd\n",
     "import dlomix\n",
     "import wandb\n",
-    "from wandb.keras import WandbCallback\n",
     "\n",
     "from dlomix import constants, data, eval, layers, models, pipelines, reports, utils\n",
     "print([x for x in dir(dlomix) if not x.startswith(\"_\")])"
@@ -111,16 +101,6 @@
     "- `utils`: helper modules\n",
     "\n",
     "**Note**: reports and pipelines are work-in-progress, some funtionalities are not complete."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# enter project name for weights and biases\n",
-    "project_name = 'dlomix_retention_time'"
    ]
   },
   {
@@ -289,9 +269,6 @@
    },
    "outputs": [],
    "source": [
-    "# Enter weights and biases run name.\n",
-    "wandb.init(project=project_name, name='walkthrough')\n",
-    "\n",
     "# create the optimizer object\n",
     "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
     "\n",
@@ -362,17 +339,7 @@
    "source": [
     "history = model.fit(rtdata.train_data,\n",
     "                    validation_data=rtdata.val_data,\n",
-    "                    epochs=15,callbacks=[WandbCallback(save_model=False)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mark the run as finished\n",
-    "wandb.finish()"
+    "                    epochs=15)"
    ]
   },
   {
@@ -451,6 +418,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can get the targets of a specific split to calcualte evaluation metrics against predictions the get_split_targets function from the RetentionTime dataset does this"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -458,8 +432,7 @@
    },
    "outputs": [],
    "source": [
-    "# we can get the targets of a specific split to calcualte evaluation metrics against predictions\n",
-    "# the get_split_targets function from the RetentionTime dataset does this\n",
+    "\n",
     "\n",
     "test_targets = test_rtdata.get_split_targets(split=\"test\")"
    ]
@@ -944,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.3"
   },
   "vscode": {
    "interpreter": {
