--- a/notebooks/RetentionTime/tasks/1_LearningRate.ipynb
+++ b/notebooks/RetentionTime/tasks/1_LearningRate.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,15 +40,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python -m pip install -q wandb"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -59,19 +49,7 @@
     "import dlomix\n",
     "from dlomix.models import RetentionTimePredictor\n",
     "import tensorflow as tf\n",
-    "from dlomix.eval import TimeDeltaMetric\n",
-    "import wandb\n",
-    "from wandb.keras import WandbCallback"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# enter project name for weights and biases\n",
-    "project_name = 'dlomix_retention_time'"
+    "from dlomix.eval import TimeDeltaMetric"
    ]
   },
   {
@@ -104,9 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enter weights and biases run name. Make sure that different learning rates have different run names.\n",
-    "wandb.init(project=project_name, name='learning_rate')\n",
-    "\n",
     "# create model\n",
     "model = RetentionTimePredictor(seq_length=30)\n",
     "\n",
@@ -141,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.3"
   },
   "vscode": {
    "interpreter": {
