remove wandb call

--- a/notebooks/RetentionTime/tasks/1_LearningRate.ipynb
+++ b/notebooks/RetentionTime/tasks/1_LearningRate.ipynb
@@ -92,11 +92,7 @@
     "model.compile(optimizer=optimizer, \n",
     "            loss='mse', metrics=['mean_absolute_error', TimeDeltaMetric()])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15,\n",
-    "                   callbacks=[WandbCallback(save_model=False)])\n",
-    "\n",
-    "# Mark the run as finished\n",
-    "wandb.finish()"
+    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)"
    ]
   }
  ],
